refactor(mail): update flushSchedulerExecutorService to use virtual threads